<resources>
    <string name="app_name">MoneyExchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="AUD_stab">AUD</string>
    <string name="Valute_stab">Valute name</string>
    <string name="value">70.4</string>
    <string name="equal">=</string>
    <string name="nominal">1</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="checj_network">Check Network Settings</string>
    <string name="result_in_rubles">Result in rubles:</string>
    <string name="saved_data_showed">Saved currency showed, to update check your internet connection</string>


    <string-array name="currency">
        <item>AED</item>
        <item>USD</item>
        <item>AED</item>
        <item>USD</item>
        <item>RUB</item>
    </string-array>
</resources>