<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/padding_10dp"
                app:srcCompat="@drawable/ic_launcher_background">
            </com.google.android.material.imageview.ShapeableImageView>

            <TextView
                android:id="@+id/charcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:text="@string/AUD_stab"
                android:textSize="@dimen/main_font_size" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Valute_stab" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/padding_10dp"
                android:text="@string/nominal"
                android:textSize="@dimen/main_font_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding_10dp"
                android:text="@string/equal"
                android:textSize="@dimen/main_font_size" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:padding="@dimen/padding_10dp"
                android:text="@string/value"
                android:textSize="@dimen/main_font_size" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>